// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputNumberComponent should render the template correctly 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template correctly if everything is provided in the vm 1`] = `
<div
  id="root8"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <app-button>
          <button
            class="btn flex flex-row justify-center btn-primary"
          />
        </app-button>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <app-input-icon
          leading=""
        >
          <span
            class="label-text my-auto flex items-center"
          >
            <mat-icon
              aria-hidden="true"
              class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
              data-mat-icon-type="font"
              role="img"
            >
              close
            </mat-icon>
          </span>
        </app-input-icon>
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <app-input-icon
          trailing=""
        >
          <span
            class="label-text my-auto flex items-center"
          >
            <mat-icon
              aria-hidden="true"
              class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
              data-mat-icon-type="font"
              role="img"
            >
              add
            </mat-icon>
          </span>
        </app-input-icon>
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template correctly if it is not readonly 1`] = `
<div
  id="root11"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template correctly if it is readonly 1`] = `
<div
  id="root12"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          readonly=""
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template correctly if the button is provided in the vm 1`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <app-button>
          <button
            class="btn flex flex-row justify-center btn-primary"
          />
        </app-button>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template correctly if the leading icon is provided in the vm 1`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <app-input-icon
          leading=""
        >
          <span
            class="label-text my-auto flex items-center"
          >
            <mat-icon
              aria-hidden="true"
              class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
              data-mat-icon-type="font"
              role="img"
            >
              add
            </mat-icon>
          </span>
        </app-input-icon>
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template correctly if the trailing icon is provided in the vm 1`] = `
<div
  id="root7"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <app-input-icon
          trailing=""
        >
          <span
            class="label-text my-auto flex items-center"
          >
            <mat-icon
              aria-hidden="true"
              class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
              data-mat-icon-type="font"
              role="img"
            >
              add
            </mat-icon>
          </span>
        </app-input-icon>
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template correctly when it has invalid state 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input is-invalid"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template correctly when it has valid state 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template if the control is disabled 1`] = `
<div
  id="root10"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          disabled=""
          id="id"
          placeholder="place"
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;

exports[`InputNumberComponent should render the template if the control is enabled 1`] = `
<div
  id="root9"
  ng-version="20.1.7"
>
  <app-input-number
    class="ng-untouched ng-pristine ng-valid"
  >
    <div
      class="my-2"
    >
      <span
        class="flex flex-row justify-between items-end label-text"
      >
        <label
          for="id"
        >
          lab
        </label>
        <!--container-->
      </span>
      <div
        class="space-x-3 flex items-center input"
      >
        <!--container-->
        <input
          autocomplete="off"
          class="grow"
          id="id"
          placeholder="place"
          type="number"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2 items-baseline helper-text"
      >
        <span>
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-number>
</div>
`;
